--- a/weather-rust/weather/Cargo.toml
+++ b/weather-rust/weather/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 reqwest = {version="0.11" , features=["blocking" , "json"]}
-serde = {version: "1.0" , features=["dervive"]}
+serde = {version= "1.0" , features=["derive"]}
 serde_json = "1.0"
 colored = "2.0"
