async await tokio

--- a/api-project/Cargo.toml
+++ b/api-project/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 reqwest= { version = "0.10" , features = ["blocking" , "json"] }
 error-chain = "0.12.4"
+tokio = { version = "1.43.0", features = ["full"] }
